added type support
