# api/api.pb.go
@@ -110,6 +110,7 @@ type AddRequest struct {
 	Source     []byte        `protobuf:"bytes,2,opt,name=Source,proto3" json:"Source,omitempty"`
 	Image      string        `protobuf:"bytes,3,opt,name=Image" json:"Image,omitempty"`
 	Dockerfile string        `protobuf:"bytes,4,opt,name=Dockerfile" json:"Dockerfile,omitempty"`
+	TypesPath  []string      `protobuf:"bytes,5,rep,name=TypesPath" json:"TypesPath,omitempty"`
 }
 
 func (m *AddRequest) Reset()                    { *m = AddRequest{} }
@@ -143,6 +144,13 @@ func (m *AddRequest) GetDockerfile() string {
 		return m.Dockerfile
 	}
 	return ""
+}
+
+func (m *AddRequest) GetTypesPath() []string {
+	if m != nil {
+		return m.TypesPath
+	}
+	return nil
 }
 
 type AddResponse struct {
@@ -483,40 +491,41 @@ var _MufaasService_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("api.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 549 bytes of a gzipped FileDescriptorProto
+	// 565 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xdd, 0x8a, 0xd3, 0x40,
-	0x14, 0x26, 0x49, 0x1b, 0xdb, 0xd3, 0x9f, 0xdd, 0x9d, 0xd6, 0x12, 0x8b, 0x48, 0x19, 0x58, 0x28,
-	0x7b, 0xb1, 0xc1, 0x55, 0x10, 0xf7, 0x66, 0x2d, 0xdb, 0x16, 0x0b, 0xfe, 0x31, 0xf5, 0xd2, 0x9b,
-	0xd8, 0x4c, 0xcb, 0x60, 0x3a, 0x13, 0x27, 0x3f, 0xb0, 0x88, 0x17, 0xfa, 0x0a, 0xbe, 0x80, 0x3e,
-	0x93, 0xaf, 0xe0, 0x83, 0xc8, 0xcc, 0x24, 0x24, 0xc5, 0xbd, 0x90, 0xbd, 0x3b, 0xe7, 0xcb, 0x99,
-	0xef, 0xfb, 0xce, 0x0f, 0x81, 0x76, 0x10, 0xb3, 0xf3, 0x58, 0x8a, 0x54, 0x20, 0x27, 0x88, 0xd9,
-	0xf8, 0xe1, 0x4e, 0x88, 0x5d, 0x44, 0xfd, 0x20, 0x66, 0x7e, 0xc0, 0xb9, 0x48, 0x83, 0x94, 0x09,
-	0x9e, 0x98, 0x12, 0xfc, 0xd3, 0x82, 0xee, 0x32, 0xe3, 0x1b, 0x85, 0xad, 0xf8, 0x56, 0xa0, 0x3e,
-	0xd8, 0xab, 0xb9, 0x67, 0x4d, 0xac, 0x69, 0x9b, 0xd8, 0xab, 0x39, 0x42, 0xd0, 0x78, 0x13, 0xec,
-	0xa9, 0x67, 0x6b, 0x44, 0xc7, 0x0a, 0x7b, 0x7f, 0x13, 0x53, 0xcf, 0x31, 0x98, 0x8a, 0xd1, 0x31,
-	0x38, 0xd7, 0xfb, 0xd0, 0x6b, 0x4c, 0x9c, 0x69, 0x9b, 0xa8, 0x10, 0x0d, 0xa1, 0xb9, 0x90, 0x52,
-	0x48, 0xaf, 0xa9, 0xcb, 0x4c, 0xa2, 0xea, 0x16, 0x3c, 0xf7, 0x5c, 0x53, 0xb7, 0xe0, 0x39, 0x7a,
-	0x04, 0xf0, 0x4e, 0xb2, 0x9c, 0x45, 0x74, 0x47, 0x43, 0xef, 0xde, 0xc4, 0x9a, 0xb6, 0x48, 0x0d,
-	0xc1, 0xdf, 0x2c, 0x80, 0x59, 0x18, 0x12, 0xfa, 0x39, 0xa3, 0x49, 0x8a, 0x4e, 0xa1, 0xa1, 0x8c,
-	0x6a, 0x8b, 0x9d, 0x8b, 0x93, 0x73, 0xd5, 0x6e, 0xbd, 0x03, 0xa2, 0x3f, 0xa3, 0x11, 0xb8, 0x6b,
-	0x91, 0xc9, 0x8d, 0x71, 0xde, 0x25, 0x45, 0xa6, 0x5c, 0xad, 0xf6, 0xc1, 0xae, 0x34, 0x6f, 0x12,
-	0xe5, 0x61, 0x2e, 0x36, 0x9f, 0xa8, 0xdc, 0xb2, 0x88, 0x7a, 0x0d, 0xfd, 0xa9, 0x86, 0xe0, 0xa7,
-	0xd0, 0xd1, 0x16, 0x92, 0x58, 0xf0, 0x84, 0xfe, 0xa7, 0x07, 0xfc, 0x1c, 0x7a, 0x84, 0xee, 0x45,
-	0x4e, 0x4b, 0xef, 0xe5, 0x30, 0x2d, 0xdd, 0xbd, 0x19, 0xe6, 0x10, 0x9a, 0x4b, 0x51, 0xfa, 0x6c,
-	0x11, 0x93, 0xe0, 0x19, 0xf4, 0xcb, 0xa7, 0x85, 0xa6, 0x0f, 0xed, 0x52, 0x22, 0xd1, 0x04, 0xb7,
-	0x0a, 0x57, 0x35, 0xf8, 0x14, 0x3a, 0xaf, 0x58, 0x92, 0x96, 0xda, 0x23, 0x70, 0x97, 0x2c, 0x4a,
-	0xa9, 0x2c, 0xd4, 0x8b, 0x0c, 0x5f, 0x41, 0xd7, 0x94, 0xdd, 0x55, 0xe7, 0x03, 0x00, 0xc9, 0xf8,
-	0xbf, 0x2d, 0x1e, 0xdc, 0xcb, 0x4c, 0xee, 0x12, 0xcf, 0x36, 0x6d, 0xab, 0xb8, 0xbc, 0x03, 0xa7,
-	0xba, 0x83, 0x21, 0x34, 0xd7, 0x69, 0xc8, 0xb8, 0x1e, 0x7f, 0x97, 0x98, 0x04, 0x3f, 0x83, 0x8e,
-	0x66, 0x2f, 0xdc, 0x8d, 0xc0, 0x7d, 0x9b, 0xa5, 0x71, 0x96, 0x6a, 0x81, 0x2e, 0x29, 0x32, 0x4d,
-	0x27, 0x65, 0xb1, 0x6b, 0x15, 0x5e, 0xfc, 0xb2, 0xa1, 0xf7, 0x3a, 0xdb, 0x06, 0x41, 0xb2, 0xa6,
-	0x32, 0x67, 0x1b, 0x8a, 0xae, 0xc0, 0x99, 0x85, 0x21, 0x3a, 0xd2, 0xdd, 0x54, 0x17, 0x35, 0x3e,
-	0xae, 0x00, 0xa3, 0x82, 0xef, 0x7f, 0xff, 0xfd, 0xe7, 0x87, 0x7d, 0x84, 0xc1, 0xcf, 0x1f, 0xfb,
-	0x21, 0x8d, 0x23, 0x71, 0x73, 0x69, 0x9d, 0xa1, 0x97, 0xe0, 0x9a, 0xa5, 0x20, 0xa4, 0x9f, 0x1c,
-	0x2c, 0x77, 0x3c, 0x38, 0xc0, 0x6e, 0x63, 0x92, 0xfa, 0x9b, 0x62, 0x7a, 0x01, 0x0d, 0x35, 0x74,
-	0x64, 0xa4, 0x6b, 0x6b, 0x1a, 0x9f, 0xd4, 0x90, 0x82, 0x63, 0xa0, 0x39, 0x7a, 0xb8, 0xa5, 0x38,
-	0x22, 0x96, 0xa4, 0x8a, 0xe1, 0x1a, 0x1c, 0x92, 0xf1, 0xa2, 0x99, 0x6a, 0xfe, 0x45, 0x33, 0xb5,
-	0x91, 0xe1, 0x07, 0xfa, 0xf9, 0x00, 0xf7, 0xb5, 0x85, 0x8c, 0xfb, 0x5f, 0xd4, 0x52, 0xbe, 0x5e,
-	0x5a, 0x67, 0x1f, 0x5d, 0xfd, 0x13, 0x78, 0xf2, 0x37, 0x00, 0x00, 0xff, 0xff, 0x0b, 0x91, 0x6c,
-	0x3b, 0x34, 0x04, 0x00, 0x00,
+	0x14, 0x26, 0x49, 0x1b, 0xb7, 0xa7, 0x3f, 0xbb, 0x3b, 0xad, 0x25, 0x96, 0x45, 0xca, 0xc0, 0x42,
+	0xd9, 0x8b, 0x0d, 0xae, 0x82, 0xb8, 0x37, 0x6b, 0xd9, 0xb6, 0x58, 0xf0, 0x67, 0x99, 0x7a, 0xe9,
+	0x4d, 0x6c, 0xa6, 0x75, 0x30, 0x9d, 0x89, 0x93, 0x1f, 0x58, 0xc4, 0x1b, 0x5f, 0xc1, 0x07, 0x50,
+	0x9f, 0xc9, 0x57, 0xf0, 0x41, 0x64, 0x66, 0x12, 0x92, 0xe2, 0x5e, 0x88, 0x77, 0xe7, 0x7c, 0x39,
+	0xf3, 0x9d, 0xef, 0x3b, 0xe7, 0x10, 0x68, 0x05, 0x31, 0x3b, 0x8f, 0xa5, 0x48, 0x05, 0x72, 0x82,
+	0x98, 0x8d, 0x4e, 0xb6, 0x42, 0x6c, 0x23, 0xea, 0x07, 0x31, 0xf3, 0x03, 0xce, 0x45, 0x1a, 0xa4,
+	0x4c, 0xf0, 0xc4, 0x94, 0xe0, 0x1f, 0x16, 0x74, 0x16, 0x19, 0x5f, 0x2b, 0x6c, 0xc9, 0x37, 0x02,
+	0xf5, 0xc0, 0x5e, 0xce, 0x3c, 0x6b, 0x6c, 0x4d, 0x5a, 0xc4, 0x5e, 0xce, 0x10, 0x82, 0xc6, 0xeb,
+	0x60, 0x47, 0x3d, 0x5b, 0x23, 0x3a, 0x56, 0xd8, 0xdb, 0xdb, 0x98, 0x7a, 0x8e, 0xc1, 0x54, 0x8c,
+	0x8e, 0xc0, 0xb9, 0xde, 0x85, 0x5e, 0x63, 0xec, 0x4c, 0x5a, 0x44, 0x85, 0x68, 0x00, 0xcd, 0xb9,
+	0x94, 0x42, 0x7a, 0x4d, 0x5d, 0x66, 0x12, 0x55, 0x37, 0xe7, 0xb9, 0xe7, 0x9a, 0xba, 0x39, 0xcf,
+	0xd1, 0x43, 0x80, 0x1b, 0xc9, 0x72, 0x16, 0xd1, 0x2d, 0x0d, 0xbd, 0x7b, 0x63, 0x6b, 0x72, 0x40,
+	0x6a, 0x08, 0xfe, 0x6e, 0x01, 0x4c, 0xc3, 0x90, 0xd0, 0x4f, 0x19, 0x4d, 0x52, 0x74, 0x0a, 0x0d,
+	0x25, 0x54, 0x4b, 0x6c, 0x5f, 0x1c, 0x9f, 0x2b, 0xbb, 0x75, 0x07, 0x44, 0x7f, 0x46, 0x43, 0x70,
+	0x57, 0x22, 0x93, 0x6b, 0xa3, 0xbc, 0x43, 0x8a, 0x4c, 0xa9, 0x5a, 0xee, 0x82, 0x6d, 0x29, 0xde,
+	0x24, 0x4a, 0xc3, 0x4c, 0xac, 0x3f, 0x52, 0xb9, 0x61, 0x11, 0xf5, 0x1a, 0xfa, 0x53, 0x0d, 0x41,
+	0x27, 0xd0, 0x52, 0x2e, 0x93, 0x9b, 0x20, 0xfd, 0xe0, 0x35, 0xb5, 0xf6, 0x0a, 0xc0, 0x4f, 0xa0,
+	0xad, 0x05, 0x26, 0xb1, 0xe0, 0x09, 0xfd, 0x47, 0x85, 0xf8, 0x19, 0x74, 0x09, 0xdd, 0x89, 0x9c,
+	0x96, 0xce, 0xca, 0x51, 0x5b, 0x9a, 0xdf, 0x8c, 0x7a, 0x00, 0xcd, 0x85, 0x28, 0x5d, 0x1c, 0x10,
+	0x93, 0xe0, 0x29, 0xf4, 0xca, 0xa7, 0x45, 0x4f, 0x1f, 0x5a, 0x65, 0x8b, 0x44, 0x13, 0xdc, 0xd9,
+	0xb8, 0xaa, 0xc1, 0xa7, 0xd0, 0x7e, 0xc9, 0x92, 0xb4, 0xec, 0x3d, 0x04, 0x77, 0xc1, 0xa2, 0x94,
+	0xca, 0xa2, 0x7b, 0x91, 0xe1, 0x2b, 0xe8, 0x98, 0xb2, 0xff, 0xed, 0xf3, 0x0e, 0x80, 0x64, 0xfc,
+	0x6f, 0x8b, 0x7b, 0xd7, 0x34, 0x95, 0xdb, 0xc4, 0xb3, 0x8d, 0x6d, 0x15, 0x97, 0x57, 0xe2, 0x54,
+	0x57, 0x32, 0x80, 0xe6, 0x2a, 0x0d, 0x19, 0xd7, 0xcb, 0xe9, 0x10, 0x93, 0xe0, 0xa7, 0xd0, 0xd6,
+	0xec, 0x85, 0xba, 0x21, 0xb8, 0x6f, 0xb2, 0x34, 0xce, 0x52, 0xdd, 0xa0, 0x43, 0x8a, 0x4c, 0xd3,
+	0x49, 0x59, 0x5c, 0x82, 0x0a, 0x2f, 0x7e, 0xda, 0xd0, 0x7d, 0x95, 0x6d, 0x82, 0x20, 0x59, 0x51,
+	0x99, 0xb3, 0x35, 0x45, 0x57, 0xe0, 0x4c, 0xc3, 0x10, 0x1d, 0x6a, 0x37, 0xd5, 0xbd, 0x8d, 0x8e,
+	0x2a, 0xc0, 0x74, 0xc1, 0xf7, 0xbf, 0xfe, 0xfa, 0xfd, 0xcd, 0x3e, 0xc4, 0xe0, 0xe7, 0x8f, 0xfc,
+	0x90, 0xc6, 0x91, 0xb8, 0xbd, 0xb4, 0xce, 0xd0, 0x0b, 0x70, 0xcd, 0x52, 0x10, 0xd2, 0x4f, 0xf6,
+	0x96, 0x3b, 0xea, 0xef, 0x61, 0x77, 0x31, 0x49, 0xfd, 0x4d, 0x31, 0x3d, 0x87, 0x86, 0x1a, 0x3a,
+	0x32, 0xad, 0x6b, 0x6b, 0x1a, 0x1d, 0xd7, 0x90, 0x82, 0xa3, 0xaf, 0x39, 0xba, 0xf8, 0x40, 0x71,
+	0x44, 0x2c, 0x49, 0x15, 0xc3, 0x35, 0x38, 0x24, 0xe3, 0x85, 0x99, 0x6a, 0xfe, 0x85, 0x99, 0xda,
+	0xc8, 0xf0, 0x03, 0xfd, 0xbc, 0x8f, 0x7b, 0x5a, 0x42, 0xc6, 0xfd, 0xcf, 0x6a, 0x29, 0x5f, 0x2e,
+	0xad, 0xb3, 0xf7, 0xae, 0xfe, 0x45, 0x3c, 0xfe, 0x13, 0x00, 0x00, 0xff, 0xff, 0xa4, 0x4b, 0x9f,
+	0x7e, 0x52, 0x04, 0x00, 0x00,
 }
