# swagger/api.swagger.json
@@ -142,6 +142,12 @@
         },
         "Dockerfile": {
           "type": "string"
+        },
+        "TypesPath": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
